# st-chat-input-multimodal

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README-ja_JP.md  README.md  example.py  pyproject.toml  setup.py
.claude/commands/: commit.md
.github/workflows/: ci.yml  release.yml
docs/: API_REFERENCE-ja_JP.md  API_REFERENCE.md
specs/001-code-refactor-security/: tasks.md
st_chat_input_multimodal/: __init__.py
st_chat_input_multimodal/frontend/: .prettierignore  package-lock.json  package.json  vite.config.ts
st_chat_input_multimodal/frontend/src/: MyComponent.tsx  constants.ts  index.tsx
st_chat_input_multimodal/frontend/src/components/: ErrorMessage.tsx  FilePreview.tsx  FileUploadButton.tsx  TextInput.tsx  VoiceButton.tsx
st_chat_input_multimodal/frontend/src/hooks/: useFileUpload.ts  useStyles.ts  useVoiceRecording.ts
st_chat_input_multimodal/frontend/src/types/: index.ts
st_chat_input_multimodal/frontend/src/utils/: audioUtils.ts  errorUtils.ts  fileUtils.ts
tests/: conftest.py  test_init.py  test_multimodal_chat_input.py
